--- a/style.css
+++ b/style.css
@@ -5963,7 +5963,7 @@ color: rgba(29, 15, 28, 255);
     }
 
     .section-sub-title {
-        font-size: 27px !important;
+        font-size: 25px !important;
     }
 
     .section-text {
@@ -6135,6 +6135,7 @@ color: rgba(29, 15, 28, 255);
     .analysis-list {
         flex-direction: column;
         height: 300px;
+        margin-top: 25px;
     }
     
     .analysis-item {
@@ -6226,7 +6227,7 @@ color: rgba(29, 15, 28, 255);
     }
 
     .section-sub-title {
-        font-size: 26px !important;
+        font-size: 24px !important;
     }
 
     .section-text {
@@ -6933,6 +6934,10 @@ color: rgba(29, 15, 28, 255);
     
     .contaoner-final-work-logo {
         padding-top: 40px;
+    }
+
+    .wrapper-logo-concept-text {
+        margin-left: 0;
     }
 
 }
