--- a/style.css
+++ b/style.css
@@ -68,6 +68,10 @@ img {
     height: auto;
 }
 
+video {
+    max-width: 100%;
+}
+
 *[data-paroller-factor] {
     position: absolute;
 }
@@ -3889,6 +3893,7 @@ margin-bottom: 11px;
 
 .small-info-service-seo-about {
     width: 453px;
+    max-width: 100%;
 }
 
 /* pack-price! */
@@ -3930,6 +3935,7 @@ margin-bottom: 11px;
 
 .btn-more-service-seo {
     width: 320px;
+    max-width: 100%;
     height: 65px;
     margin-bottom: 93px;
     border: none;
@@ -5171,6 +5177,10 @@ color: rgba(29, 15, 28, 255);
     background: url(images/header-srm-fon-1.png) no-repeat 75% 75%,url(images/header-srm-fon-2.jpg) no-repeat;
 }
 
+.crm-header-fon {
+    display: none;
+}
+
 .sml-info-service-srm-we-top {
     width: auto;
     height: auto;
@@ -5183,6 +5193,39 @@ color: rgba(29, 15, 28, 255);
 }
 
 /* header! */
+
+/* what-cmm */
+
+.what-cmm {
+    background: url(images/right-fon-4.png) no-repeat 125% 10%;
+}
+
+.container-what-smm {
+    
+    padding: 101px 15px 100px 15px;
+}
+
+.what-cmm-title {
+    font-family: 'Stolzl Book';
+    font-size: 30px;
+}
+
+.wrapper-section-title {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 50px;
+}
+/* what-cmm! */
+
+/* .crm-video {
+    -o-object-fit: cover;
+      object-fit: cover;
+      position: fixed;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+} */
 
 /* amoCrm-helpe */
 
@@ -5272,10 +5315,12 @@ color: rgba(29, 15, 28, 255);
 
 .smm-button-link {
     width: 400px;
+    max-width: 100%;
     height: 65px;
     display: flex;
     align-items: center;
     justify-content: center;
+    padding: 0 25px;
     border-radius: 30px;
     background-image: -moz-linear-gradient( 0deg, rgb(74,10,240) 0%, rgb(78,229,234) 100%);
     background-image: -webkit-linear-gradient( 0deg, rgb(74,10,240) 0%, rgb(78,229,234) 100%);
@@ -7880,20 +7925,265 @@ color: rgba(29, 15, 28, 255);
 
 /* index-adapt! */
 
-/* ADAPTIV! */
+/* automation-adapt */
 
-/* FIX-SLIDER */
+@media (max-width: 1600px) {
 
+    .automation-about-fon-2 {
+        left: 47%;
+    }
 
-/* .slick-track {
-    display: flex !important;
 }
 
-.slick-slide {
-    height: auto !important;
-} */
+@media (max-width: 1500px) {
+
+    .automation-about-fon-2 {
+        left: 43%;
+    }
+
+}
+
+@media (max-width: 1400px) {
+
+    .automation-about-fon-2 {
+        width: 60%;
+        left: 40%;
+    }
+
+}
+
+@media (max-width: 1300px) {
+
+    .automation-about-fon-2 {
+        top: 36%;
+        width: 50%;
+        left: 50%;
+    }
+
+    .automation-about-title {
+        margin-bottom: 100px;
+    }
+
+}
+
+@media (max-width: 1050px) {
+
+    .automation-info-img {
+        width: 50%;
+    }
+
+}
+
+@media (max-width: 950px) {
+
+    .automation-about-fon-2 {
+        width: 40%;
+        left: 54%;
+
+    }
 
 
+}
 
 
-/* FIX-SLIDER! */
+@media (max-width: 900px) {
+
+    .automation-about-fon-2 {
+        position: initial;
+        width: 100%;
+        order: 3;
+    }
+
+    .container-automation-about {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .small-info-service-automation-about {
+        width: auto;
+    }
+
+    .container-automation-info{
+        flex-direction: column-reverse;
+        align-items: flex-start;
+    }
+    .container-automation-info-one-c {
+        flex-direction: column;
+    }
+
+    .automation-info-img {
+        width: auto;
+    }
+
+}
+
+
+/* automation-adapt! */
+
+/* amoCRM-ADAPT */
+
+@media (max-width: 1900px) {
+
+    .amoCrm-helper-img {
+        left: 10%;
+    }
+
+    .smm-info-2-img {
+        left: 10%;
+    }
+
+}
+
+@media (max-width: 1800px) {
+
+    .header-srm {
+        background: url(images/header-srm-fon-1.png) no-repeat 90% 75%,url(images/header-srm-fon-2.jpg) no-repeat;
+    }
+
+}
+
+@media (max-width: 1700px) {
+
+    .amoCrm-helper-img {
+        left: 5%;
+    }
+
+    .smm-info-2-img {
+        left: 5%;
+    }
+
+}
+
+@media (max-width: 1500px) {
+
+    .wrapper-amoCrm-helper {
+        width: 480px;
+    }
+
+    .header-srm {
+        background-size: 50% 65%, 100% 100%;
+    }
+
+}
+
+@media (max-width: 1400px) {
+
+    .wrapper-smm-info-2-text {
+        width: 480px;
+    }
+
+    .header-srm {
+        background-size: 45% 55%, 100% 100%;
+    }
+
+}
+
+@media (max-width: 1300px) {
+
+    .amoCrm-helper-img {
+        left: 25px;
+    }
+
+}
+
+@media (max-width: 1200px) {
+
+    .amoCrm-helper-img {
+       position: initial;
+       width: 100%;
+       order: 3;
+    }
+
+    .wrapper-amoCrm-helper {
+        width: auto;
+    }
+
+    .wrapper-smm-info-1 {
+        flex-direction: column;
+    }
+
+    .wrapper-smm-info-4 {
+        flex-direction: column-reverse;
+    }
+
+    .smm-info-1-img {
+        width: 100%;
+        margin-top: 25px;
+    }
+
+    .smm-info-2-img {
+        position: initial;
+        width: 100%;
+        order: 3;
+    }
+
+    .wrapper-smm-info-2-text {
+        width: auto;
+    }
+
+    .smm-info-4-img {
+        width: 100%;
+        margin-top: 25px;
+    }
+       
+    .smm-info-5-img {
+        position: initial;
+        width: 100%;
+        margin-top: 25px;
+    }
+
+    .wrapper-smm-info-5-text {
+        width: auto;
+    }
+
+    .header-srm {
+        background-size: 40% 45%, 100% 100%;
+    }
+}
+
+@media (max-width: 1000px) {
+
+    .crm-price-item {
+        width: 400px;
+        max-width: 100%;
+        flex: none;
+        margin-bottom: 15px
+    }
+
+    .crm-price-list {
+        justify-content: center;
+    }
+
+}
+
+@media (max-width: 1100px) {
+
+    .header-bottom-crm {
+        margin-top: 75px;
+    }
+
+}
+
+@media (max-width: 900px) {
+
+    .header-srm {
+        background: url(images/header-srm-fon-2.jpg) no-repeat;
+        background-size: 100% 100%;
+    }
+
+    .small-info-service-seo-about {
+        width: auto;
+    }
+
+    .crm-header-fon {
+        display: block;
+        margin-bottom: 75px;
+    }
+
+}
+
+/* amoCRM-ADAPT! */
+
+/* ADAPTIV! */
+
+
