--- a/style.css
+++ b/style.css
@@ -1752,7 +1752,7 @@ button:focus{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 364px;
+    /* height: 364px; */
     margin-top: 50px;
     margin: 50px 15px 0 0;
 }
@@ -1786,7 +1786,7 @@ button:focus{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 364px;
+    /* height: 364px; */
     margin: 50px 0 0 15px;
     flex:1;
     box-shadow: 0px 10px 74.1px 20.9px rgba(58, 112, 255, 0.09);
