--- a/style.css
+++ b/style.css
@@ -564,20 +564,22 @@ button:focus{
 }
 
 .switch{
+    border: none;
     width: 38px;
     height: 38px;
     border: 0px;
     border-radius: 20px;
-    background: #f3f3f3;
-    color: #8e8e8e;
+    display: block;
+    background-image: -moz-linear-gradient( 36deg, rgb(75,38,239) 0%, rgb(77,201,235) 100%);
+    background-image: -webkit-linear-gradient( 36deg, rgb(75,38,239) 0%, rgb(77,201,235) 100%);
+    background-image: -ms-linear-gradient( 36deg, rgb(75,38,239) 0%, rgb(77,201,235) 100%);
+    box-shadow: 0px 9px 11.7px 1.3px rgba(77, 161, 236, 0.46);
+    color: #fff;
 }
 
 .switch:hover,
 .switch:focus{
-    background: #4c5cee;
-    box-shadow:0px 15px 7px 0px rgba(70, 73, 245, 0.49);
-    outline: none;
-    color: #ffffff;
+    box-shadow: 0px 1px 10px 6px rgb(72, 120, 235);
 }
 
 .projects-list__item-img{
@@ -1921,6 +1923,8 @@ button:focus{
 }
 
 .dev-stage-text {
+    /* display: flex; */
+    /* flex: 1 0 auto; */
     font-family: 'Stolzl Book';
     font-size: 11px; 
 }
@@ -1957,17 +1961,25 @@ button:focus{
     height: 38px;
     border: 0px;
     border-radius: 20px;
-    background: #f3f3f3;
-    color: #8e8e8e;
     font-size: 0;
     display: block;
-    /* background: #fff; */
+    background-image: -moz-linear-gradient( 36deg, rgb(75,38,239) 0%, rgb(77,201,235) 100%);
+    background-image: -webkit-linear-gradient( 36deg, rgb(75,38,239) 0%, rgb(77,201,235) 100%);
+    background-image: -ms-linear-gradient( 36deg, rgb(75,38,239) 0%, rgb(77,201,235) 100%);
+    box-shadow: 0px 9px 11.7px 1.3px rgba(77, 161, 236, 0.46);
+
 }
+
+.wrapper-analisis-item .slick-arrow:hover,
+.wrapper-analisis-item .slick-arrow:focus {
+    box-shadow: 0px 1px 10px 6px rgb(72, 120, 235);
+}
+  
 
 .wrapper-analisis-item .slick-arrow::before {
     width: 4px;
     height: 3px;
-    color: black;
+    color: #fff;
     font-size: 16px;
 }
 
