--- a/style.css
+++ b/style.css
@@ -5106,7 +5106,7 @@ color: rgba(29, 15, 28, 255);
 /* NAV-MOB */
 
 .mobile-menu-nav-list {
-    height: 100vh;
+    /* height: 100vh; */
     display: flex;
     flex-direction: column;
     /* align-items: center; */
@@ -5139,7 +5139,12 @@ color: rgba(29, 15, 28, 255);
 }
 
 .mobile-sub-menu-nav-item {
+    display: none;
     list-style: none;
+}
+
+.visible-mobile-sub-menu-nav-item {
+    display: block;
 }
 
 .mobile-sub-menu-nav-item__link {
@@ -5159,7 +5164,7 @@ color: rgba(29, 15, 28, 255);
 }
 
 .mobile-menu-nav-item__link {
-    display: block;
+    display: inline-block;
     padding: 30px 0;
     text-decoration: none;
     cursor: pointer;
